fixed submenu that was not usable on mobile

--- a/public/themes/default.css
+++ b/public/themes/default.css
@@ -1,3 +1,8 @@
+html, body {
+  margin: 0;
+  height: 100%;
+}
+
 body {
   font-family:
     -apple-system,
@@ -10,13 +15,12 @@ body {
     "Open Sans",
     "Helvetica Neue",
     sans-serif;
-  margin: 0;
-  display: grid;
-  grid-template-rows: auto auto 1fr auto;
-  align-items: top;
-  min-height: 100vh;
   background-color: rgb(30, 30, 30);
   color: rgb(255, 255, 255);
+  position: relative;
+  margin: 0;
+  min-height: 100%;
+  overflow-x: hidden;
 }
 
 /* Site Name CSS */
@@ -121,9 +125,12 @@ body {
 /* Markdown content CSS, yay ! */
 
 #content {
-  max-width: 100vh;
+  max-width: 100em;
+  min-height: 60%;
   padding-left: 5%;
   padding-right: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
   margin-left: auto;
   margin-right: auto;
   /* place as high as possible */
@@ -147,8 +154,8 @@ body {
 
 /* CSS for markdown images */
 #content img {
-  max-width: 90vw;
-  max-height: 30vh;
+  max-width: 90%;
+  max-height: 30em;
   object-fit: contain;
   display: block;
   margin-left: auto;
@@ -160,7 +167,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 30px 30px 20px 30px;
+  padding: 2%;
   color: white;
   background-color: rgb(37, 37, 37);
   flex-wrap: wrap;
